# vital-chatwoot-bridge

./: .gitignore  Dockerfile  README.md  docker-compose.mock.yml  docker-compose.prod.yml  docker-compose.test.mock.yml  docker-compose.yml  env.example  env.sample  environment.yml  kill_services.sh  pyproject.toml  requirements.txt  setup.py  test_attentive.json  test_loopmessage3.json
aws_deploy/: README.md  service-definition.json  task-definition.json
config/: api_inboxes.json  inbox_agent_mappings.json
notes/: NOTES.md  PLAN.md  REVISED_PLAN.md  chatwoot-api-inbox.md  integration-notes.md
scripts/: run_tests.py  set_config_env.py
templates/email/: cerberus-responsive.html.j2  gmail_outreach.html.j2  gmail_outreach_inline_cta.html.j2  gmail_simple.html.j2
test_endpoint_scripts/: base.py  case_registry.py  test_agents.py  test_contacts.py  test_conversations.py  test_inboxes.py  test_messages.py
test_endpoint_scripts/cases/: __init__.py
test_endpoint_scripts/cases/agents/: list_agents.py
test_endpoint_scripts/cases/contacts/: contact_count.py  create_contact.py  delete_contact.py  get_contact.py  list_contacts.py  merge_contacts.py  search_contacts.py  update_contact.py
test_endpoint_scripts/cases/conversations/: account_summary.py  conversation_count.py  create_conversation.py  delete_conversation.py  get_conversation.py  list_conversations.py  update_conversation.py
test_endpoint_scripts/cases/inboxes/: list_inboxes.py
test_endpoint_scripts/cases/messages/: delete_message.py  list_messages.py  post_message.py  send_loopmessage.py
test_inbound_scripts/: README.md  test_attentive_inbound.py  test_loopmessage_inbound.py
test_scripts/: chatwoot_app_api.py  chatwoot_contact_manager.py  chatwoot_inbox_manager.py
tests/: test_health.py
vital_chatwoot_bridge/: __init__.py  main.py
vital_chatwoot_bridge/agents/: __init__.py  aimp_message_client.py  mock_agent.py  models.py  websocket_manager.py
vital_chatwoot_bridge/api/: __init__.py  api_inbox_routes.py  chatwoot_management_routes.py  routes.py
vital_chatwoot_bridge/chatwoot/: __init__.py  api_client.py  client_api.py  client_models.py  communication_models.py  contact_cache.py  management_models.py  models.py
vital_chatwoot_bridge/client/: agents.py  auth.py  base.py  client.py  contacts.py  conversations.py  exceptions.py  inboxes.py  messages.py  models.py
vital_chatwoot_bridge/core/: __init__.py  auth_models.py  config.py  models.py
vital_chatwoot_bridge/email/: __init__.py  models.py  renderer.py
vital_chatwoot_bridge/handlers/: __init__.py  webhook_handler.py  webhook_handler_backup.py  webhook_handler_clean.py
vital_chatwoot_bridge/integrations/: gmail_client.py  loopmessage_client.py  mailgun_client.py  url_shortener.py  zoom_sms_client.py
vital_chatwoot_bridge/services/: __init__.py  api_inbox_service.py  inbox_cache.py  message_debouncer.py  message_webhook.py  redis_client.py  webhook_queue.py
vital_chatwoot_bridge/testing/: __init__.py  integration_tests.py  mock_chatwoot.py  test_scenarios.py
vital_chatwoot_bridge/utils/: env_parser.py  jwt_auth.py  jwt_verify.py  logging_config.py  sms_splitter.py  webhook_security.py
vital_chatwoot_bridge/zoom/: __init__.py  models.py  oauth.py  refresh_worker.py  token_store.py
vitalhome/vital-config/vitalsigns/: vitalsigns_config.yaml
