[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vital-chatwoot-bridge"
version = "0.1.2"
description = "Chatwoot management bridge with REST API and async Python client"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Vital AI", email = "info@vital.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
client = [
    "httpx>=0.25.0",
]
server = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "PyJWT[crypto]>=2.8.0",
    "aiofiles>=23.2.1",
    "pydantic-settings>=2.1.0",
    "Jinja2>=3.1.0",
    "boto3>=1.28.0",
    "vital-ai-vitalsigns>=0.1.51",
    "vital-ai-haley-kg>=0.1.24",
    "vital-agent-container-client>=0.0.8",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vital-ai/vital-chatwoot-bridge"
Repository = "https://github.com/vital-ai/vital-chatwoot-bridge"
Issues = "https://github.com/vital-ai/vital-chatwoot-bridge/issues"

[project.scripts]
vital-chatwoot-bridge = "vital_chatwoot_bridge.main:main"

[tool.setuptools.packages.find]
include = ["vital_chatwoot_bridge*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
